--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ author       = "Nathan Schucher"
 cachebuster  = true # add the current unix timestamp in query string for cache busting css assets
 dateform     = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
-description  = "Lover of code, machine learning, and love itself"
+description  = "I make things with code some of the time"
 email        = ""
 faviconfile  = "img/leaf.ico"
 github       = "//github.com/nschuc"
@@ -29,7 +29,7 @@ highlightjs  = true
 lang         = "en"
 linkedin     = "//www.linkedin.com/in/nathan-schucher-89905460"
 twitter      = "//twitter.com/nschucher"
-selfIntro    = ""
+selfIntro    = "look at this guy, drinking his coffee; who does he think he is"
 
 # gravatar             = ""                # do not use in the same time as avatar
 avatar                 = "img/profile.jpg" # path to image in static dir e.g img/avatar.png (do not use in the same time as gravatar)
